--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <span>L</span>
         </div>
     <div class="description">
+        <span>HAPPY BIRTHDAY/span>
         <span>Aku punya something spesial very good very well buat kamu</span>
     </div>
     <div class="button">
