--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>For Amel</title>
+    <title>Flowers</title>
 </head>
 <body>
     <div class="greetings">
@@ -23,8 +23,12 @@
             <span>E</span>
             <span>L</span>
         </div>
+
     <div class="description">
-        <span>HAPPY BIRTHDAY/span>
+        <span>Happy Birthday</span>
+    </div>
+
+    <div class="descriptions">
         <span>Aku punya something spesial very good very well buat kamu</span>
     </div>
     <div class="button">
