--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     </div>
 
     <div class="descriptions">
-        <span>Aku punya something spesial very good very well buat kamu</span>
+        <span>Wishing you lots of smiles, laughter and love in the year ahead 😄❤️</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Klik disini</a>
+            <a href="flower.html">coba klik disini</a>
         </button>
         
     </div>
