--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
 
     <div class="description">
-        <span>Happy Birthday </span>
+        <span>Happy Birthday</span>
     </div>
 
     <div class="descriptions">
@@ -33,7 +33,7 @@
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">coba klik disini</a>
+            <a href="flower.html">touch here</a>
         </button>
         
     </div>
