--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>For-Amel</title>
 </head>
 <body>
+    <audio autoplay>
+        <source src="https://github.com/petanikode/belajar-html/raw/master/music/HappyBirthday-piano.mp3" type="audio/mpeg">
+    </audio>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
